@@ -17,3 +17,4 @@ hs_err_pid*
 .settings/
 .gradle/
 bin/
+logs/
