@@ -35,6 +35,8 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-thymeleaf')
     testCompile('org.springframework.boot:spring-boot-starter-test') 
 	runtime('com.h2database:h2')
+	runtime('mysql:mysql-connector-java')
+	runtime('org.webjars:bootstrap:3.1.0')
 }
 
 
