@@ -4,8 +4,10 @@ import org.h2.server.web.WebServlet;
 import org.springframework.boot.context.embedded.ServletRegistrationBean;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.data.web.config.EnableSpringDataWebSupport;
 
 @Configuration
+//@EnableSpringDataWebSupport
 public class WebConfig {
 	@Bean
 	ServletRegistrationBean h2servletRegistration() {
