@@ -2,7 +2,11 @@ package org.anyio.b2c.controller;
 
 import org.anyio.b2c.domain.Customer;
 import org.anyio.b2c.service.CustomerService;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -15,9 +19,39 @@ public class CustomerController {
 	@Autowired
 	private CustomerService customerService;
 
-	@RequestMapping(value = "customers", method = RequestMethod.GET)
-	public String list(Model model) {
+	private Logger log = LoggerFactory.getLogger(CustomerController.class);
+
+	@RequestMapping(value = "customersall", method = RequestMethod.GET)
+	public String listCustomers(Model model) {
 		model.addAttribute("customers", customerService.listAllCustomer());
+		log.debug("show customers all controller.");
+		return "customers";
+	}
+
+	@RequestMapping(value = "customers", method = RequestMethod.GET)
+	public String showCustomers(Model model, Pageable pageable) {
+		
+		// todo: add page number validation
+		
+		Page<Customer> page = customerService.listCustomers(pageable);
+		// prevent page number exceeds totalPages.
+		int current_index = Math.min(page.getNumber(), page.getTotalPages() - 1);
+		// start from the second item.
+		int start_index = Math.min(1, page.getTotalPages() - 2);
+		// end with the item before the last
+		int end_index = Math.min(9, page.getTotalPages() - 2);
+
+		if (current_index >= 10) {// pagenum >= current_index
+			start_index = Math.max(1, current_index - 3);
+			end_index = Math.min(page.getTotalPages() - 2, current_index + 2);
+		}
+
+		model.addAttribute("customers", page);
+		model.addAttribute("current_index", current_index);
+		model.addAttribute("start_index", start_index);
+		model.addAttribute("end_index", end_index);
+
+		log.debug("show customers with page.");
 		return "customers";
 	}
 
