@@ -4,7 +4,10 @@ import org.anyio.b2c.domain.Customer;
 import org.anyio.b2c.repository.CustomerRepository;
 import org.anyio.b2c.service.CustomerService;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
+import org.springframework.web.bind.annotation.RequestMapping;
 
 /**
  * CustomerService with SpringDataJPA implementation.
@@ -14,7 +17,7 @@ import org.springframework.stereotype.Service;
  */
 @Service
 public class CustomerServiceJpa implements CustomerService {
-	
+
 	@Autowired
 	private CustomerRepository customerRepository;
 
@@ -23,6 +26,17 @@ public class CustomerServiceJpa implements CustomerService {
 		return customerRepository.findAll();
 	}
 
+	/**
+	 * 分页查询
+	 * 
+	 * @param pageable
+	 * @return
+	 */
+	@RequestMapping
+	public Page<Customer> listCustomers(Pageable pageable) {
+		return customerRepository.findAll(pageable);
+	}
+	
 	@Override
 	public Customer getCustomerById(Long id) {
 		return customerRepository.findOne(id);
