@@ -1,2 +1,22 @@
 # server info
 server.port=${port:9000}
+
+logging.level.org.anyio=DEBUG
+
+
+# h2 database
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+
+# logging
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=ERROR
+logging.level.org.thymeleaf=ERROR
+
+
+# For debug with Thymeleaf templates reload
+spring.thymeleaf.cache=false
