@@ -2,34 +2,37 @@
 server.port=${port:8000}
 
 # logging
+logging.file=logs/ecserver.log
 logging.level.org.springframework.web=ERROR
 logging.level.org.hibernate=ERROR
 logging.level.org.thymeleaf=ERROR
-logging.file=logs/ecserver.log
+logging.level.org.anyio=ERROR
+
 
 # Thymeleaf cache
 spring.thymeleaf.cache=true
 
-
 # MySQL database
-spring.datasource.url=jdbc:mysql://192.168.99.100:13306/testdb
+spring.datasource.url=jdbc:mysql://192.168.99.100:32770/testdb?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=root
-
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.sqlScriptEncoding=UTF-8
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
-
-# Show or not log for each sql query
-spring.jpa.show-sql = true
+spring.datasource.max-active=5
+spring.datasource.max-idle=2
+spring.datasource.min-idle=1
+spring.datasource.initial-size=1
+spring.datasource.initialize=false
 
 # Hibernate ddl auto (create, create-drop, update): with "update" the database
 # schema will be automatically updated accordingly to java entities found in
 # the project
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create
+spring.jpa.show-sql = true
+spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
-# Naming strategy
-spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
-
-# Allows Hibernate to generate SQL optimized for a particular DBMS
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
