@@ -4,22 +4,8 @@ server.port=${port:8080}
 
 spring.profiles.active=dev
 
-# h2 database
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-
-# logging
-logging.level.org.springframework.web=DEBUG
-logging.level.org.hibernate=ERROR
-logging.level.org.thymeleaf=ERROR
 
 
 # i18n for Thymeleaf messages
 spring.messages.basename=i18n/messages
 
-# For debug with Thymeleaf templates reload
-spring.thymeleaf.cache=false
