@@ -3,6 +3,7 @@
 
 <head lang="en">
 	<title>Customer编辑</title>
+	<link rel='stylesheet' href='/webjars/bootstrap/3.1.0/css/bootstrap.min.css'/>
 </head>
 
 <body>
