@@ -1,38 +1,92 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
-	<title>用户列表</title>
+<title>用户列表</title>
+<link rel='stylesheet'
+	href='/webjars/bootstrap/3.1.0/css/bootstrap.min.css' />
 </head>
 
 <body>
 
-<div class="container">
+	<div class="container">
+		<div th:if="${not #lists.isEmpty(customers)}">
+			<h2>用户列表：</h2>
+			<!-- <span th:text="${current_index}">current_index</span> <span
+				th:text="${start_index}">start_index</span> <span
+				th:text="${end_index}">end_index</span> 
+				<span th:text="${customers.content}"></span> -->
+			<nav>
+				<ul class="pagination">
+					<li th:class="${customers.first}?'disabled':''"><a
+						th:if="${current_index gt 0}"
+						th:href="@{/customers(page=${current_index-1},size=${customers.size})}"
+						aria-label="Previous"> <span aria-hidden="true">&laquo;上一页</span>
+					</a></li>
+					<li th:class="disabled" th:if="${current_index le 0}"><span
+						aria-hidden="true">&laquo;上一页</span></li>
 
-	<div th:if="${not #lists.isEmpty(customers)}">
-		<h2>用户列表：</h2>
-		<table class="table table-striped">
-			<tr>
-				<th>ID</th>
-				<th>CustomerName</th>
-				<th>CustomerMobile</th>
-				<th>CustomerStatus</th>
-				<th>View</th>
-				<th>Edit</th>
-				<th>Delete</th>
-			</tr>
-			<tr th:each="customer : ${customers}">
-				<td th:text="${customer.id}"><a href="customer/${customer.id}">Id</a></td>
-				<td th:text="${customer.name}">Name</td>
-				<td th:text="${customer.mobile}">mobile</td>
-				<td th:text="${customer.status}">status</td>
-				<td><a th:href="${'customer/' + customer.id}">View</a></td>
-				<td><a th:href="${'customer/edit/' + customer.id}">Edit</a></td>
-				<td><a th:href="${'customer/delete/' + customer.id}">Delete</a></td>
-			</tr>
-		</table>
+					<li th:if="${customers.totalPages gt 0}"
+						th:class="${current_index eq 0}?'active':''"><a
+						th:href="@{/customers(page=0,size=${customers.size})}" th:text="1">first
+							page</a></li>
+					<!-- if start_index great than 4, left commas display -->
+					<li th:if="${start_index gt 1 and customers.totalPages gt 7}"><a
+						th:text="..."></a></li>
+
+					<li th:if="${customers.totalPages gt 2}"
+						th:each="i: ${#numbers.sequence(start_index,end_index)}"
+						th:class="${current_index eq i}?'active':''"><a
+						th:text="${i+1}"
+						th:href="@{/customers(page=${i},size=${customers.size})}">2</a></li>
+
+					<!-- if end less than totalPages - 3, right commas display -->
+					<li
+						th:if="${end_index lt customers.totalPages-3 and customers.totalPages gt 7}"><a
+						th:text="..."></a></li>
+
+					<li th:if="${customers.totalPages gt 1}"
+						th:class="${current_index+1 eq customers.totalPages}?'active':''"><a
+						th:href="@{/customers(page=${customers.totalPages-1},size=${customers.size})}"
+						th:text="${customers.totalPages}">last page</a></li>
+
+					<li th:class="${customers.last}?'disabled':''"><a
+						th:if="${not customers.last}"
+						th:href="@{/customers(page=${current_index+1},size=${customers.size})}"
+						aria-label="Next"> <span aria-hidden="true">&raquo;下一页</span>
+					</a></li>
+					<li th:class="disabled" th:if="${customers.last}"><span
+						aria-hidden="true">&raquo;下一页</span></li>
+
+				</ul>
+			</nav>
+			<table class="table table-striped table-hover">
+				<tr>
+					<th></th>
+					<th>ID</th>
+					<th>CustomerName</th>
+					<th>CustomerMobile</th>
+					<th>CustomerStatus</th>
+					<th>View</th>
+					<th>Edit</th>
+					<th>Delete</th>
+				</tr>
+				<tr th:each="customer : ${customers}">
+					<td><span class="glyphicon glyphicon-user" aria-hidden="true"></span></td>
+					<td th:text="${customer.id}"><a href="customer/${customer.id}">Id</a></td>
+					<td th:text="${customer.name}">Name</td>
+					<td th:text="${customer.mobile}">mobile</td>
+					<td th:text="${customer.status}">status</td>
+					<td><a th:href="${'customer/' + customer.id}"
+						class="btn btn-default">View</a></td>
+					<td><a th:href="${'customer/edit/' + customer.id}"
+						class="btn btn-default">Edit</a></td>
+					<td><a th:href="${'customer/delete/' + customer.id}"
+						class="btn btn-danger">Delete</a></td>
+				</tr>
+			</table>
+		</div>
+
 	</div>
-
-</div>
 
 </body>
 
