@@ -5,6 +5,7 @@
 
 <head>
 	<title>Customer详情</title>
+	<link rel='stylesheet' href='/webjars/bootstrap/3.1.0/css/bootstrap.min.css'/>
 </head>
 
 <body>
