@@ -2,12 +2,16 @@
 <html>
 <head lang="en">
 	<title>电商平台</title>
+	<link rel='stylesheet' href='/webjars/bootstrap/3.1.0/css/bootstrap.min.css'/>
 </head>
 
 <body>
 
 <div class="container">
-See U soon...
+	<div class="jumbotron">
+        <h1>Theme example</h1>
+        <p>Coming soon...</p>
+    </div>
 </div>
 
 </body>
