@@ -10,7 +10,10 @@ log standard: slf4j, logback
 profile: prod, dev
 Thymeleaf i18n
 write unittest for customer service crud
+optimize with css, icons
+add search methods with @Query
+pagination like jd
+add mysql for prod profile
 
-optimize with css, js, image
 rest api design
 product and order
